--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
 {% block page_content %}
 
 <body>
+
+	    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+	{% endfor %}
+	
 	<section id="image-header">
 		<h1> <center>Improve your life. Find your perfect pet.</center> </h1>
 		<center>
@@ -48,12 +56,12 @@
 			<li>
 				<img src="/static/site-images/placeholder-square.webp">
 				<h3> Dog Care Guide </h3>
-				<p> A short description of what this page is! </p>
-				<a href="/"> <button class="btn btn-primary"> Learn More </button>  </a>
+				<p>Everything you need to know on<br>how to train your new furry friend!</p>
+				<a href="/adoptdog"> <button class="btn btn-primary"> Learn More </button>  </a>
 			</li>
 			<li>
 				<img src="/static/site-images/placeholder-square.webp">
-				<h3> Cat Care Guide </h3>
+				<h3> Lizard Care Guide </h3>
 				<p> A short description of what this page is! </p>
 				<a href="/"> <button class="btn btn-primary"> Learn More </button>  </a>
 			</li>
