--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,24 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block content %}
+{% block page_content %}
 
 <div class="page-header">
 	<div class="container">
-		<br><h1>Sign In</h1>
+		<br><h1>Sign in</h1>
 	</div>
 </div>
 
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+
 <div class="container">
+
+
+
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -19,8 +29,9 @@
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>{{ form.submit() }}<br>
     </form>
 </div>
 
 {% endblock %}
+
