--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
                                     <ul class="nav navbar-nav">
                                         <li><a href="/adoptdog">Dogs</a></li>
                                     </ul>
+                                    <ul class="nav navbar-nav">
+                                        <li><a href="/axolotl">Axolotls</a></li>
+                                    </ul>
                     </ul>
                 </li> 
             </ul>
