tweaked addpet prompts a lil

--- a/templates/addPet.html
+++ b/templates/addPet.html
@@ -256,7 +256,7 @@
       
       <div class="row">
         <div class="col-md-12">
-          <p><strong>Is the pet up on his shots?</strong></p>
+          <p><strong>Is the pet up to date on vaccinations?</strong></p>
         </div>
       </div>
 
@@ -266,11 +266,11 @@
       <div class = "row">
         <div class = "col-md-6">
           <input type="radio" id="noKids" name="kidFriendly" value="False">
-      <label for="noKids">Not good with children</label>
+      <label for="noKids">No</label>
         </div>
         <div class = "col-md-6">
           <input type="radio" id="kids" name="kidFriendly" value="True">
-      <label for="kids">Good with children</label>
+      <label for="kids">Yes</label>
         </div>
       </div>
 
@@ -287,11 +287,11 @@
       <div class = "row">
         <div class = "col-md-6">
           <input type="radio" id="noOtherPets" name="petFriendly" value="False">
-      <label for="noOtherPets">Not good with other pets</label>
+      <label for="noOtherPets">No</label>
         </div>
         <div class = "col-md-6">
           <input type="radio" id="otherPets" name="petFriendly" value="True">
-      <label for="otherPets">Good with other pets</label>
+      <label for="otherPets">Yes</label>
         </div>
       </div>
 
@@ -306,7 +306,7 @@
 
 
       <p><input type= "text" name="description" class="form-control">
-      <label for="description">Pet description</label></p>
+      <label for="description">Short description for the pet</label></p>
 
       <p><input type="submit" value="Submit"></p>
       
