--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -400,3 +400,30 @@ em {
 .right{
 	text-align: right;
 }
+
+body {
+	  min-height: 100vh;
+	  position: relative;
+	  margin: 0;
+	  padding-bottom: 100px;
+	  box-sizing: border-box;
+}
+
+.footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 100px;
+}
+
+.radio-class{
+	display: flex;
+	flex: 1 1 0;
+	flex-wrap: nowrap;
+	position: relative;
+}
+
+span {
+	float: left;
+}
