--- a/templates/petupdate.html
+++ b/templates/petupdate.html
@@ -11,7 +11,7 @@
       </div>
 </div>
 <body>
-    <h1> Update a pet: <h1>
+    <h1> Update a pet: </h1>
     <form method="POST" name="form" action="/updatepet" enctype="multipart/form-data">
 
         <p><input type= "text" name="petname" value="{{pet.name}}"></p>
